--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -2,13 +2,13 @@
   <div class="header-image-overlay">
     <div class="container">
       <div class="x-padding-full">
-        <h1 class="mdc-typography--headline3 b-margin-full b-padding">
+        <h1 class="b-margin-full b-padding">
           Celebrating youth volunteering in Scotland
         </h1>
-        <h2 class="mdc-typography--headline5 t-margin-full t-padding">
+        <h2 class="t-margin-full t-padding">
           Aged 12-25 and volunteer?
         </h2>
-        <p class="mdc-typography--body2">
+        <p>
           <strong>The Saltire Awards are the Scottish Government's way of celebrating,<br />
           recognising and rewarding the commitment, contribution and <br />
           achievements of young volunteers in Scotland.</strong>
@@ -28,37 +28,35 @@
     <div class="columns certificates">
       <div class="col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/challenge.png' ~}}" class="certificate-icon responsive-img" />
-        <p class="mdc-typography--body1">
+        <p>
           For those getting started in volunteering through team challenges
         </p>
       </div>
       <div class="col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/approach.png' ~}}" class="certificate-icon responsive-img" />
-        <p class="mdc-typography--body1">
+        <p>
           For when you've reached 10 and 25 hours volunteering
         </p>
       </div>
       <div class="col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/ascent.png' ~}}" class="certificate-icon responsive-img" />
-        <p class="mdc-typography--body1">
+        <p>
           For when you've reached 50, 100, 200 or even 500 hours
         </p>
       </div>
       <div class="col-3 certificate">
         <img src="{{~>asset_url url='images/certificates/logos/summit.png' ~}}" class="certificate-icon responsive-img" />
-        <p class="mdc-typography--body1">
+        <p>
           For those that have made an outstanding contribution to volunteering
         </p>
       </div>
     </div>
-    <div class="mdc-layout-grid my-saltire">
-      <div class="columns">
-        <div class="col-6 my-saltire-item align-centre">
-          <a href="/sign-up" class="btn btn-primary text-centre">Register now</a>
-        </div>
-        <div class="col-6 my-saltire-item align-centre">
-          <a href="/sign-in" class="btn text-centre">Sign in</a>
-        </div>
+    <div class="my-saltire columns">
+      <div class="col-6 my-saltire-item align-centre">
+        <a href="/sign-up" class="btn btn-primary text-centre">Register now</a>
+      </div>
+      <div class="col-6 my-saltire-item align-centre">
+        <a href="/sign-in" class="btn text-centre">Sign in</a>
       </div>
     </div>
   </div>
