--- a/src/main.scss
+++ b/src/main.scss
@@ -397,6 +397,16 @@ footer {
   }
 }
 
+.claim-code {
+  color: #333;
+  background-color: #eee;
+  padding: $unit/5 $unit/4 0;
+  margin-bottom: $unit/4;
+  font-size: 95%;
+  display: inline-block;
+  font-family: 'Consolas', 'Monaco', 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', monospace;
+}
+
 .text-left {
   text-align: left;
 }
