--- a/configuration/templates/pages/hours.hbs
+++ b/configuration/templates/pages/hours.hbs
@@ -124,7 +124,7 @@
       </div>
       <div class="col-1"></div>
       <div class="col-1">
-        <a href="/admin-pdf/{{task_id}}" class="btn btn-primary r-margin b-margin">Download all</a>
+        <a href="/admin-pdf/{{task_id}}" class="btn btn-primary r-margin b-margin" download>Download all</a>
       </div>
       <div class="col-1"></div>
     </div>
@@ -165,7 +165,7 @@
           {{/if}}
         </div>
         <div class="col-2">
-          <a href="admin-pdf/{{task_id}}/{{hours_id}}" class="btn">Download</a>
+          <a href="admin-pdf/{{task_id}}/{{hours_id}}" class="btn" download>Download</a>
         </div>
         <div class="col-1">
           {{#if claim_code}}
