more misc refactoring

--- a/configuration/templates/pages/claim-hours.hbs
+++ b/configuration/templates/pages/claim-hours.hbs
@@ -3,32 +3,22 @@
     Claim hours by certificate code
   </h1>
   <form id="input-code-form" action="/submit-hours-claim" method="POST" data-ajax-form='{
-        "successCallback": "completeHoursClaim",
-        "failureCallback": "completeHoursClaim"
-      }'>
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-            <input id="task-code" name="hours_claim_code"  class="mdc-text-field__input mdc-text-field--fullwidth" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task-code}}>
-            <div class="mdc-notched-outline">
-              <div class="mdc-notched-outline__leading"></div>
-              <div class="mdc-notched-outline__notch">
-                <label for="organisation_name" class="mdc-floating-label">
-                  Enter Claim code.
-                </label>
-              </div>
-              <div class="mdc-notched-outline__trailing"></div>
-            </div>
-          </div>
+    "successCallback": "completeHoursClaim",
+    "failureCallback": "completeHoursClaim"
+  }'>
+    <div class="columns col-gapless">
+      <div class="col-6">
+        <div class="form-group">
+          <label for="organisation_name" class="form-label">
+            Enter claim code
+          </label>
+          <input id="task-code" name="hours_claim_code" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task-code}}>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <button id="detail-submit" type="submit" class="submit-button mdc-button mdc-button--raised b-margin-full" id="register-interest-submit" >
-            <span class="icon far fa-hand-paper mdc-list-item__graphic" aria-hidden="true"></span>
-            <span class="spinner fas fa-spin fa-spinner mdc-list-item__graphic" aria-hidden="true"></span>
-            Submit details
-          </button>
-        </div>
+      </div>
+      <div class="col-6">
+        <button id="detail-submit" type="submit" class="submit-button btn btn-primary b-margin-full">
+          Submit details
+        </button>
       </div>
     </div>
   </form>
@@ -50,5 +40,4 @@
       saltireawards.componentsInitialiser.snackbar.show({message:"Failed to claim hours."});
     }
   }
-
 </script>
