--- a/configuration/templates/pages/hours.hbs
+++ b/configuration/templates/pages/hours.hbs
@@ -64,7 +64,7 @@
 
   <h2>
     Volunteering with {{organisation_name}}
-    <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{this.task_id}}-details">
+    <span class="pull-right" data-collapse-target="#{{this.task_id}}-details">
       <span class="far fa-chevron-up" aria-hidden="false"></span>
     </span>
   </h2>
@@ -103,8 +103,6 @@
           <div class="col-3"></div>
           <div class="col-1">
             <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="group-hours-submit">
-              <!-- <span class="icon far fa-hand-paper mdc-list-item__graphic" aria-hidden="true"></span> -->
-              <!-- <span class="spinner fas fa-spin fa-spinner mdc-list-item__graphic" aria-hidden="true"></span> -->
               Submit details
             </button>
           </div>
