--- a/configuration/templates/account/approval-required.hbs
+++ b/configuration/templates/account/approval-required.hbs
@@ -1,7 +1,14 @@
 <div class="container-fluid b-padding-full v-margin-full">
-  <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} approval</h2>
+  <h2>
+    {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
+    Parent or guardian
+    {{else}}
+    Group administrator
+    {{/compare ~}}
+    approval
+  </h2>
   <p>
-    {{#compare @root.data.accountInfo.user_type "Volunteer"}}
+    {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
     Please ask your parent or guardian to open the link in the email sent to them from the Saltire Awards.
     {{else}}
     TSI approval required. An email has been sent to
@@ -14,40 +21,32 @@
     {{/each ~}}
     {{/with ~}}
     {{/if ~}}
-    {{/compare}}
+    {{/compare ~}}
   </p>
-  <button onclick="sendApprovalEmail(true)" class="mdc-button mdc-button--raised">Resend email</button>
-  {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}
-  <button onclick="revealForm()" class="mdc-button mdc-button--raised">Change email address</button>
-  {{/compare}}
-  <form id="user-details-form" style="display:none;"  method="POST" action="submit-user-details">
-    Please enter the new email address below.
+  <button onclick="sendApprovalEmail(true)" class="btn btn-primary">Resend email</button>
+  {{#compare @root.data.accountInfo.user_type "===" "Volunteer" ~}}
+  <button onclick="revealForm()" class="btn btn-primary">Change email address</button>
+  {{/compare ~}}
+  <form id="user-details-form" style="display:none;" method="POST" action="submit-user-details">
+    Please enter the new email address below
     <input type="hidden" name="signup" value="true">
-    {{#each (getKeys @root.data.accountInfo)}}
-      {{#compare this "===" "verification_email"}}
+    {{#each (getKeys @root.data.accountInfo) ~}}
+      {{#compare this "===" "verification_email" ~}}
       {{else}}
       <input type="hidden" name="{{this}}" value="{{getProperty @root.data.accountInfo this}}">
-    {{/compare}}
-    {{/each}}
-    <div class="mdc-layout-grid">
-      <div id="approval" class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-            <input type="email" id="verification_email" name="verification_email" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
-            <div class="mdc-notched-outline">
-              <div class="mdc-notched-outline__leading"></div>
-              <div class="mdc-notched-outline__notch">
-                <label for="verification_email" class="mdc-floating-label">
-                  Your parent or guardian's email address
-                </label>
-              </div>
-              <div class="mdc-notched-outline__trailing"></div>
-            </div>
-          </div>
+    {{/compare ~}}
+    {{/each ~}}
+    <div id="approval" class="columns col-gapless">
+      <div class="col-6">
+        <div class="form-group">
+          <label for="verification_email" class="form-label">
+            Your parent or guardian's email address
+          </label>
+          <input type="email" id="verification_email" name="verification_email" class="form-input" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
         </div>
       </div>
     </div>
-    <button type="submit">submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
 
